2006-01-19  Anders Carlsson  <andersca@mac.com>

        Reviewed by Darin.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6653
        CSSStyleDeclaration returns empty string when trying to access shorthand 
        properties using JS accessors.

        * fast/dom/css-shortHands-expected.checksum:
        * fast/dom/css-shortHands-expected.png:
        * fast/dom/css-shortHands-expected.txt:
        * fast/dom/css-shortHands.html:
        Update

2006-01-19  Eric Seidel  <eseidel@apple.com>

        Reviewed by darin & anders.

        Fix opacity crasher for <text> and <image>.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6668
        Even though the crash is fixed, opacity still doesn't work.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6669

        * svg/custom/text-image-opacity-expected.checksum: Added.
        * svg/custom/text-image-opacity-expected.png: Added.
        * svg/custom/text-image-opacity-expected.txt: Added.
        * svg/custom/text-image-opacity.svg: Added.

2006-01-18  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Hyatt.

        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6618
          Inline in RTL block with overflow:auto and left border makes scroll bar appear

        * fast/overflow/overflow-rtl-inline-scrollbar-expected.checksum: Added.
        * fast/overflow/overflow-rtl-inline-scrollbar-expected.png: Added.
        * fast/overflow/overflow-rtl-inline-scrollbar-expected.txt: Added.
        * fast/overflow/overflow-rtl-inline-scrollbar.html: Added.

2006-01-17  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        Layout tests for:
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=6632>
        REGRESSION: Selection includes spaces that it shouldn't
        <rdar://problem/4407845> 
        REGRESSION (TOT): blank space before found text selected at http://www.schepers.cc/comiclinks.html
