@@ -1,0 +1,50 @@
+EDITING DELEGATE: webViewDidChangeSelection:WebViewDidChangeSelectionNotification
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderBlock {P} at (0,0) size 784x36
+        RenderText {TEXT} at (0,0) size 212x18
+          text run at (0,0) width 212: "This tests for a regression against "
+        RenderInline {I} at (0,0) size 768x36
+          RenderInline {A} at (0,0) size 348x18 [color=#0000EE]
+            RenderText {TEXT} at (212,0) size 348x18
+              text run at (212,0) width 348: "http://bugzilla.opendarwin.org/show_bug.cgi?id=6673"
+          RenderText {TEXT} at (560,0) size 768x36
+            text run at (560,0) width 4: " "
+            text run at (564,0) width 204: "Selection highlight doesn't scroll"
+            text run at (0,18) width 369: "along with an image contained in an overflow:scroll block"
+        RenderText {TEXT} at (369,18) size 4x18
+          text run at (369,18) width 4: "."
+      RenderBlock {P} at (0,52) size 784x36
+        RenderText {TEXT} at (0,0) size 748x36
+          text run at (0,0) width 412: "There should be one contiguous highlight from \x{201C}elit\x{201D} to \x{201C}Etiam\x{201D}, "
+          text run at (412,0) width 336: "including the orange square, and no other highlighted"
+          text run at (0,18) width 36: "areas."
+      RenderBlock {HR} at (0,104) size 784x2 [border: (1px inset #000000)]
+layer at (8,122) size 100x200 clip at (8,122) size 85x200 scrollY 40 scrollHeight 288
+  RenderBlock {DIV} at (0,114) size 100x200
+    RenderText {TEXT} at (0,0) size 84x108
+      text run at (0,0) width 84: "Lorem ipsum"
+      text run at (0,18) width 51: "dolor sit"
+      text run at (0,36) width 34: "amet,"
+      text run at (0,54) width 78: "consectetuer"
+      text run at (0,72) width 64: "adipiscing"
+      text run at (0,90) width 27: "elit. "
+    RenderImage {IMG} at (27,94) size 10x10
+    RenderText {TEXT} at (37,90) size 83x198
+      text run at (37,90) width 4: " "
+      text run at (41,90) width 37: "Etiam"
+      text run at (0,108) width 57: "et ipsum."
+      text run at (0,126) width 31: "Nam"
+      text run at (0,144) width 78: "consectetuer"
+      text run at (0,162) width 81: "mi eget velit."
+      text run at (0,180) width 83: "Sed nec risus"
+      text run at (0,198) width 60: "vitae felis"
+      text run at (0,216) width 39: "auctor"
+      text run at (0,234) width 53: "ultricies."
+      text run at (0,252) width 79: "Pellentesque"
+      text run at (0,270) width 54: "aliquet..."
+selection start: position 58 of child 0 {TEXT} of child 7 {DIV} of child 1 {BODY} of child 0 {HTML} of document
+selection end:   position 11 of child 2 {TEXT} of child 7 {DIV} of child 1 {BODY} of child 0 {HTML} of document
