@@ -1,3 +1,15 @@
+2006-01-20  Mitz Pettel  <opendarwin.org@mitzpettel.com>
+
+        Reviewed by Darin, committed by Adele.
+
+        - test for http://bugzilla.opendarwin.org/show_bug.cgi?id=6673
+          Selection highlight doesn't scroll along with an image contained in an overflow:scroll block
+
+        * fast/overflow/image-selection-highlight-expected.checksum: Added.
+        * fast/overflow/image-selection-highlight-expected.png: Added.
+        * fast/overflow/image-selection-highlight-expected.txt: Added.
+        * fast/overflow/image-selection-highlight.html: Added.
+
 2006-01-19  Anders Carlsson  <andersca@mac.com>
 
         Reviewed by Darin.
